--- a/opdracht2/style.css
+++ b/opdracht2/style.css
@@ -11,5 +11,61 @@ body{
 img{
     width: 200px;
 }
+
+#logo1{
+    margin: 20px;
+}
+
+#logo2{
+    width: 400px;
+}
+
+#logo3{
+    border: 1px solid black;
+}
+
+header{
+    width: 100%;
+    height: 20%;
+    background-color: grey;
+    
+    
+}
+main{
+    width: 100%;
+    height: 80%;
+    background-color: red;
+}
+footer{
+    width: 100%;
+    height: 20%;
+    background-color: green;
+}
+
+nav {
+    text-decoration: none;
+}
+#navh ul {
+    display: flex;
+    padding: 20px;
+}
+
+ul {
+    list-style-type: none;
+}
+h1 {
+    font-size: 50px;
+    background-color: white;
+}
+ul {
+    border: 1px dashed black;
+}
+h3 {
+    font-family: monospace;
+}
+ul img {
+    color: black;
+    list-style-type: circle;
+}
 /* Einde aangeleverde code, laten staan, niet veranderen */
 /* Vul hieronder je eigen code */
