--- a/opdracht3/style.css
+++ b/opdracht3/style.css
@@ -1,2 +1,55 @@
+header ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: rgb(197, 176, 176);
+  }
+
+ header li {
+    display: flex;
+    justify-content: row;
+    display: inline-block;
+  }
+
+  header li a {
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+  }
+
+ 
+  header li a:hover {
+    background-color: rgb(224, 50, 50);
+  }
+
+  footer ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: rgb(201, 175, 175);
+  }
+
+ footer li {
+    display: flex;
+    justify-content: row;
+    display: inline-block;
+  }
+
+  footer li a {
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+  }
+
+ 
+  footer li a:hover {
+    background-color: rgb(224, 50, 50);
+  }
 
 
